# irb2

./: README.md  pyproject.toml  requirements.txt
irbase/: utils.py
irbase/analysis/: mutation_level.py
irbase/genbank/: add_curation_groups.py  genbank_annotation_sheet.py  genbank_table.py  group_genbank.py  subset_genbank.py
irbase/parsers/: igblast.py
irbase/pipeline/: cellranger_to_seq_records.py  cr_to_seq_rec.py  cr_to_seqrec.py  genbank_to_seqrec.py  parse_igblast.py  seqrec_add_parse_igblast.py  seqrec_to_fastx.py  split_avro.py
irbase/schemata/: avro.py
irbase/tools/: cat_avro.py  fastx_to_seqrec.py  seqrec_list_parses.py  seqrec_to_fastx.py
