[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "irb2"
version = "0.0.1"
authors = [
  {name="Krishna M. Roskin", email="krishnaroskin@gmail.com"},
]
description = "Set of tools for processing AIRR-seq data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastavro>=1.12.1",
  "biopython>=1.86",
  "cramjam>=2.11.0",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"   
]

[project.scripts]
seqrec_add_parse_igblast = "irbase.tools.seqrec_add_parse_igblast:main"
seqrec_to_fastx = "irbase.tools.seqrec_to_fastx:main"